--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,5 +1,10 @@
 header {
     background-image: url('../assets/images/header_background.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100px; /* Adjust as needed for your banner height */
+    width: 100%;
     z-index: 6;
 }
 
